@@ -198,8 +198,7 @@ class PodTemplateDescriptor(Descriptor):
                          'dashboard_collections_ids',
                          'context_variables',
                          'style_template',
-                         'roles_bypassing_talcondition',
-                         'store_as_annex')
+                         'roles_bypassing_talcondition')
 
     def __init__(self, id, title, description='', enabled=True, dashboard=False):
         self.id = id
@@ -219,7 +218,7 @@ class PodTemplateDescriptor(Descriptor):
         self.context_variables = []
         self.style_template = []
         self.roles_bypassing_talcondition = []
-        self.store_as_annex = []
+        self.store_as_annex = None
         self.store_as_annex_title_expr = u''
 
 
@@ -600,6 +599,9 @@ class MeetingConfigDescriptor(Descriptor):
         self.usedVoteValues = ('not_yet', 'yes', 'no', 'abstain')
         self.defaultVoteValue = 'not_yet'
         self.voteCondition = 'True'
+
+        # Doc parameters -------------------------------------------------------
+        self.meetingItemTemplateToStoreAsAnnex = ''
 
 
 class PloneMeetingConfiguration(Descriptor):
