@@ -68,7 +68,7 @@
          i18n:attributes="title"
          action_id="store_every_items_decision_as_annex"
          category="object_buttons"
-         condition_expr=""
+         condition_expr="object/@@store-every-items-template-as-annex/may_store"
          icon_expr=""
          url_expr="string:${object_url}/@@store-every-items-template-as-annex"
          visible="True">
